corrected aligning

--- a/style.css
+++ b/style.css
@@ -17,3 +17,7 @@ button {
 video{
   text-align: center;
 }
+
+p{
+	text-align: center;
+}
